# test_for_jetlend

./: .gitignore  README.md  pyproject.toml  task11.py  task14.py  task7.py  task8.py  task9.py  test.xlsx
task10/djangoProject1/: settings.py
task10/jetlend/: admin.py  apps.py  models.py  tasks.py  views.py
task10/jetlend/migrations/: 0001_initial.py  0002_investor.py
